# workflow-example

./: .gitignore  Makefile  README.md
analytics/: avg.py
cpp/: CMakeLists.txt  sim-kokkos.cpp
cpp/cpu/: CMakeLists.txt  sim-deisa-ray.cpp  sim-doreisa.cpp
cpp/gpu/: CMakeLists.txt  sim-kokkos-deisa-ray.cpp  sim-kokkos-doreisa.cpp
launch-scripts/: launch-cpp-local.sh  launch-insitu-cpp-kokkos-local.sh  launch-insitu-cpp-local.sh  launch-insitu-python-local.sh
nix/: flake.nix
python/: pyproject.toml  requirements.txt  sim-deisa-ray.py  sim-doreisa.py
